==> PengJoy1106/Solar-tracking-and-intelligent-agriculture/STM32_Code/User/oled.c <==
#include "oled.h"

static void OLED_WrDat(unsigned char dat)     
{
  
  HAL_GPIO_WritePin(OLED_PORT,OLED_CMD,GPIO_PIN_SET);
    
	HAL_SPI_Transmit(&SPI2_Handle,&dat,1,5000);
	   

}

static void OLED_WrCmd(unsigned char cmd)
{
   
  HAL_GPIO_WritePin(OLED_PORT,OLED_CMD,GPIO_PIN_RESET);
	  
	HAL_SPI_Transmit(&SPI2_Handle,&cmd,1,5000);// spi_sentdata(&SPI1_Handle,cmd); 
    
}
