==> animala/ESP8266-Gray/Nos/app/Stddriver/OLED.c <==
#include "OLED.h"
#include "i2c_master.h"
#include "i2c_oled_fonts.h"

void ICACHE_FLASH_ATTR
OLED_WrDat(unsigned char IIC_Data)
{
	write_reg(0x40,IIC_Data);
}

void ICACHE_FLASH_ATTR
OLED_WrCmd(unsigned char IIC_Command)
{
	write_reg(0x00,IIC_Command);
}
